tests/src/frontend/typechecking/invalid/invalid_conditional_use_1.sk
class MyVector<+T>(v: Vector<T>) uses Show[T: Show] {
  fun toString[T: Show](): String {
    this.v.toString()
  }
}

fun print_show<T: Show>(x: T): void {
  print_string(x.toString())
}

base class P() {
  children =
  | X
  | Y
}

fun main(): void {
  print_show(MyVector(Vector[X(), Y()]))
}
